[package]
name = "uds_windows"
version = "0.1.6-alpha.0"
license = "MIT"
authors = ["Azure IoT Edge Devs", "Harald Hoyer <harald@redhat.com>"]
description = "Unix Domain Sockets for Windows!"
repository = "https://github.com/haraldh/rust_uds_windows"
readme = "README.md"
keywords = ["windows", "uds", "unix", "domain", "sockets"]
categories = ["os::windows-apis"]
exclude = [".gitignore"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winsock2", "ws2def", "minwinbase", "ntdef", "processthreadsapi", "handleapi", "ws2tcpip", "winbase"] }
tempdir = "0.3"
